--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h1 class="mb-0">Yutong
             <span class="text-primary">Wang</span>
           </h1>
-          <div class="subheading mb-5">University of Virginia · (434) 529-7451 ·
+          <div class="subheading mb-5">University of Virginia · Incoming Technical Staff @ VMware ·
             <a href="mailto:yw4ku@virginia.edu">yw4ku@virginia.edu</a>
           </div>
           <p class="mb-5">I am a master student majoring in Computer Science, and I am experienced in full stack web development, as well as text mining ans machine learning.</p>
@@ -100,7 +100,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Work Experience</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Development Intern | San Jose, CA</h3>
               <div class="subheading mb-3">BayTech Digital</div>
@@ -111,9 +111,9 @@
               <li><p>Worked closely with clients and collaborated with multiple departments to improve the influence of the company.</p></li>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2018 - Present</span>
+              <span class="text-primary">June 2018 - Aug. 2018</span>
             </div>
-          </div>
+          </div> -->
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -125,7 +125,7 @@
               <li><p>Set up test environments and identified architectural improvements resulting in increased efficiency and reliability.</p></li>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Sept. 2016 – May 2017</span>
+              <span class="text-primary">Sept. 2016 – Jan. 2017</span>
             </div>
           </div>
 
@@ -191,7 +191,7 @@
               
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2018 - Present</span>
+              <span class="text-primary">July 2018 - Dec. 2018</span>
             </div>
           </div>
 
@@ -254,9 +254,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2> 
-          <p>Apart from being a web developer, I enjoy most of my time doing yoga.I have Yoga Coaching credentials in China, and yoga allows me to relax my body and heart.</p>
-          <p>Also, I love running, I took participate in International Marathon before and enjoy running for 5 miles everyday.</p>
+          <h2 class="mb-5">Articles</h2> 
+          <li><a href = 'https://github.com/elvawyt/MyBlogs/issues/1'>BAT battle -- Chinese cloud platforms comparison.</a></li>
+          
           </div>
       </section>
 
