--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 		<a data-scroll="" href="#blog">
 		  <span>Blog</span>
 		</a>
+		<a data-scroll="" href="#projects">
+				<span>Project</span>
+			</a>
 		
 	  </div>
 	</nav>
@@ -511,7 +514,6 @@ as high-dimensional vector space and referred the relationship between each of t
 	  <div class="footer-bottom">
 		<div class="container">
 		  <div class="row">
-			<img src="images/logo-bottom.png" alt="logo bottom" class="center-block" />Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://www.17sucai.com/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
 		  </div>
 		</div>
 	  </div>
