--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 								GPA: 3.8/4.0
 							</p>
 							<p>
-								Course: Machine Learning, Text Mining, Information Retrieval, Algorithm.
+								Course: Machine Learning, Text Mining, Information Retrieval, Software Testing.
 							</p>
 						</div>
 					  </div>
