--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<tr>
 							<td class="title">Position </td>
 							<td class="break">:</td>
-							<td>Incoming technical staff @VMware</td>
+							<td>Member of Technical staff @VMware</td>
 							</tr>
 						
 					  
