--- a/index.html
+++ b/index.html
@@ -206,22 +206,21 @@
 					<div class="wrap-card">
 					  <div class="card">
 						<h2 class="year">
-						  YLZ Information Technology Co., LTD
+						  BayTech Digital
 						</h2>
 						<p class="job">
 						  Software development intern.
 						</p>
 						<p class="company">
-						  Jul. 2015 – Sept. 2015
+						  June. 2018 – Aug. 2018
 						</p>
 						<hr>
 						<div class="text-detail">
 						  <p>
-								Gathered user requirements and identify new features. Liaise with developers to improve applications and establish best
-									practices. Ensured all projects meet company and performance requirements
+								Worked on both front-end and back-end server with engineering team. Implemented data and server migration and facilitated the delivery of projects. 
 							</p>
 							<p>
-									Designed and created the MySQL database and coded JDBC transactions using Java Prepared Statements.
+								Worked closely with clients and assisted with the troubleshooting and deployment of several software projects.
 							</p>
 						</div>
 					  </div>
