--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					  <tr>
 						<td class="title">Email </td>
 						<td class="break">:</td>
-						<td> yw4ku@virginia.edu</td>
+						<td>yw4ku@virginia.edu</td>
 					  </tr>
 					  <tr>
 						<td class="title">Address </td>
@@ -139,7 +139,7 @@
 						<tr>
 							<td class="title">Position </td>
 							<td class="break">:</td>
-							<td>Member of Technical staff @VMware</td>
+							<td>Software Engineer @VMware</td>
 							</tr>
 						
 					  
@@ -176,26 +176,23 @@
 					<div class="wrap-card">
 					  <div class="card">
 						<h2 class="year">
-						  Sram Technology Co., LTD
+						  VMware
 						</h2>
 						<p class="job">
-						  web development intern.
+						  Software Engineer
 						</p>
 						<p class="company">
-						  Sept. 2016 – Jan. 2017
+						  July. 2019 – Now
 						</p>
 						<hr>
 						<div class="text-detail">
-						  <p>
-								Worked extensively on J2EE for web development by JSP, Servlets, JDBC, MySQL based on MVC framework
+							<p>Worked on infrastructure/platform team
 							</p>
-							<p>
-								Built and integrated multiple tiers in N-tier application. Maintained quality and ensure responsiveness of applications.
-							</p>
-							<p>
-								Set up test environments and identified architectural improvements resulting in increased efficiency and reliability.
+							<p>Technical Skills/Stack:
+							<p>Kubernetes, Docker, Elastic Search, Nats, REST API, gRPC
 							</p>
 						</div>
+
 					  </div>
 					</div>
 				  </div>
