modified work experience, add interests section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 		</a>
 		<a data-scroll="" href="#projects">
 				<span>Project</span>
-			</a>
+		</a>
+		<a data-scroll="" href="#interests">
+			<span>Interests</span>
+		</a>
 		
 	  </div>
 	</nav>
@@ -139,7 +142,7 @@
 						<tr>
 							<td class="title">Position </td>
 							<td class="break">:</td>
-							<td>Software Engineer @VMware</td>
+							<td>Software Engineer @ Google</td>
 							</tr>
 						
 					  
@@ -182,17 +185,16 @@
 						  Software Engineer
 						</p>
 						<p class="company">
-						  July. 2019 – Now
+						  July. 2019 – Feb. 2021
 						</p>
 						<hr>
 						<div class="text-detail">
-							<p>Worked on infrastructure/platform team
+							<p>Worked on <b>infrastructure/platform</b> team.
 							</p>
-							<p>Technical Skills/Stack:
+							<p><b>Technical Skills/Stack:</b>
 							<p>Kubernetes, Docker, Elastic Search, Nats, REST API, gRPC
 							</p>
 						</div>
-
 					  </div>
 					</div>
 				  </div>
@@ -214,10 +216,10 @@
 						<hr>
 						<div class="text-detail">
 						  <p>
-								Worked on both front-end and back-end server with engineering team. Implemented data and server migration and facilitated the delivery of projects. 
+							Worked as <b>full stack web development engineer</b>.
 							</p>
 							<p>
-								Worked closely with clients and assisted with the troubleshooting and deployment of several software projects.
+							Worked closely with clients and assisted with the troubleshooting and deployment of several software projects.
 							</p>
 						</div>
 					  </div>
@@ -278,13 +280,13 @@
 						<hr>
 						<div class="text-detail">
 						  <p>
-								M.S. in Computer Science
+								<b>M.S. in Computer Science</b>
 							</p>
 							<p>
-								GPA: 3.8/4.0
+								<b>GPA: </b>3.8/4.0
 							</p>
 							<p>
-								Course: Machine Learning, Text Mining, Information Retrieval, Software Testing.
+								<b>Course: </b> Machine Learning, Text Mining, Information Retrieval, Algorithm, Software Testing.
 							</p>
 						</div>
 					  </div>
@@ -309,13 +311,13 @@
 						<hr>
 						<div class="text-detail">
 						  <p>
-								B.E. in Software Engineering
+								<b>B.E. in Software Engineering</b>
 							</p>
 							<p>
-								GPA: 90/100
+								<b>GPA: </b>90/100
 							</p>
 							<p>
-								Course: Web Development, Software Testing, Data Structure, Software Testing
+								<b>Course: </b> Web Development, Software Testing, Data Structure, Software Testing
 							</p>
 						</div>
 					  </div>
@@ -487,6 +489,31 @@ as high-dimensional vector space and referred the relationship between each of t
 		</div>
 	  </div>
 	</section>
+	<!--INTERESTS-->
+	<section id="interests">
+		<div class="col-md-6 col-xs-12 no-pad">
+		  <div class="interests"></div>
+		</div>
+		<div class="col-md-6 col-sm-12 col-xs-12 white-col">
+		  <div class="row">
+			<!--OWL CAROUSEL2-->
+			<div class="owl-carousel2">
+			  <div class="col-md-12 col-sm-12 col-xs-12 white-col">
+				<div class="row">
+				  <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
+					<div class="wrap-about">
+						<p class="content-detail">
+						Apart from work, I enjoy climbing, snowboarding, and running. I am also a certificated yoga instructor in China.
+						</p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>
+			<!--/.OWL CAROUSEL2 END-->
+		  </div>
+		</div>
+	  </section>
 	<!--CONTACT-->
 
 	<!--/.CONTACT END-->
